# remotelib

./: Makefile  README.md  pyproject.toml
remotelib/: __init__.py  _file.py  _ssh.py
tests/: test_path.py
