[project]
name = "remotelib"
description = "host-agnostic wrapper of pathlib using ssh"
version = "0.1.0"
authors = [{name = "Joe Jenne", email = "jjenne@cisco.com"}]
readme = "README.md"
urls = { repository = "jenne.uk/remotelib" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
lint = [
    "black==23.7.0",
    "isort==5.12.0",
    "mypy==1.4.1",
    "pylint==2.17.5",
]
test = [
    "pytest==7.4.0",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true

[tool.pylint]
output-format = "colorized"
reports = "no"
dummy-variables-rgx = "_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?$"
disable = [
    "too-many-arguments", # maybe remove later
    "too-many-locals",   # maybe remove later
    "global-statement",  # got to use it for dry run
    "no-else-return",    # sometimes it is clearer this way
    "invalid-name",      # single char names in comprehension are ok
]

